--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-css-only": "^4.3.1",
     "bulma": "^0.7.5",
     "element-ui": "^2.12.0",
     "jquery": "^3.4.1",
+    "mdbvue": "^6.0.0",
     "nuxt": "^2.10.2",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
