--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@mdi/font": "^4.5.95",
     "@nuxtjs/font-awesome": "^1.0.4",
+    "animate.css": "^3.7.2",
     "aos": "^3.0.0-beta.6",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
@@ -34,7 +35,9 @@
     "mdbvue": "^6.0.0",
     "nuxt": "^2.10.2",
     "popper.js": "^1.15.0",
+    "sass": "^1.23.3",
     "vue": "^2.6.10",
+    "vue-cli-plugin-mdb": "^2.0.1",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
@@ -45,7 +48,7 @@
     "@vue/cli-service": "^3.9.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
