--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqoinvuemmerce",
+  "name": "q",
   "version": "0.9.2",
   "description": "Sqoin Gallery",
   "scripts": {
@@ -32,9 +32,11 @@
     "bulma": "^0.7.5",
     "element-ui": "^2.12.0",
     "jquery": "^3.4.1",
+    "ks-vue-fullpage": "^1.2.8",
     "mdbvue": "^6.0.0",
     "nuxt": "^2.10.2",
     "popper.js": "^1.15.0",
+    "remove": "^0.1.5",
     "sass": "^1.23.3",
     "vue": "^2.6.10",
     "vue-cli-plugin-mdb": "^2.0.1",
@@ -63,5 +65,15 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sqoin/gallery.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/sqoin/gallery/issues"
+  },
+  "homepage": "https://github.com/sqoin/gallery#readme"
 }
